# cca-rmm-acs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  latest.diff
docs/: attestation_measurement_scenarios.md  change-log.rst  command_scenarios.rst  device_assignment_scenarios.md  exception_scenarios.md  gic_scenarios.md  mec_lfa.md  memory_management_scenarios.md  planes_scenarios.rst  pmu_debug.md  porting_guide.md  rhi_scenarios.md  scenario_doc.md  testcase_failure_analysis.md
lib/configs/mbedtls/: rmm_mbedtls_config.h
lib/mbedtls/: CMakeLists.txt
patch/: 0001-TrustedFirmware-A-patch-for-SEL2.patch  trusted-firmware-a.diffpatch
plat/common/inc/: pal.h  pal_arch.h  pal_arch_helpers.h  pal_common_support.h  pal_common_val_intf.h  pal_crypto.h  pal_interfaces.h  pal_irq.h  pal_libc.h  pal_mmio.h  pal_pcie_enum.h  pal_rhi.h  pal_shemaphore.h  pal_smc.h
plat/common/src/: pal_crypto.c  pal_exerciser.c  pal_libc.c  pal_pcie.c  pal_pcie_enumeration.c  pal_rhi.c  pal_smc.c  pal_spinlock.S  pal_syscall.S
plat/driver/inc/: pal_arm_gic.h  pal_cdefs.h  pal_gic_common.h  pal_gic_v3.h  pal_nvm.h  pal_pl011_uart.h  pal_smmuv3_test_engine.h  pal_sp805_watchdog.h  platform.h
plat/driver/src/: pal_nvm.c  pal_pl011_uart.c  pal_smmuv3_test_engine.c  pal_sp805_watchdog.c
plat/targets/tgt_tfa_fvp/: pal.cmake
test/attestation_measurement/attestation_challenge_data_verification/: attestation_challenge_data_verification_host.c  attestation_challenge_data_verification_realm.c
test/attestation_measurement/attestation_platform_challenge_size/: attestation_platform_challenge_size_host.c  attestation_platform_challenge_size_realm.c
test/attestation_measurement/attestation_realm_measurement_type/: attestation_realm_measurement_type_host.c  attestation_realm_measurement_type_realm.c
test/attestation_measurement/attestation_rec_exit_irq/: attestation_rec_exit_irq_host.c  attestation_rec_exit_irq_realm.c
test/attestation_measurement/attestation_rem_extend_check/: attestation_rem_extend_check_host.c  attestation_rem_extend_check_realm.c
test/attestation_measurement/attestation_rem_extend_check_realm_token/: attestation_rem_extend_check_realm_token_host.c  attestation_rem_extend_check_realm_token_realm.c
test/attestation_measurement/attestation_rpv_value/: attestation_rpv_value_host.c  attestation_rpv_value_realm.c
test/attestation_measurement/attestation_token_address/: attestation_token_address_host.c  attestation_token_address_realm.c
test/attestation_measurement/attestation_token_init/: attestation_token_init_host.c  attestation_token_init_realm.c
test/attestation_measurement/attestation_token_verify/: attestation_token_verify_host.c  attestation_token_verify_realm.c
test/attestation_measurement/common/: attestation_realm.c  attestation_realm.h
test/attestation_measurement/measurement_immutable_rim/: measurement_immutable_rim_host.c  measurement_immutable_rim_realm.c
test/attestation_measurement/measurement_initial_rem_is_zero/: measurement_initial_rem_is_zero_host.c  measurement_initial_rem_is_zero_realm.c
test/attestation_measurement/measurement_rim_order/: measurement_rim_order_host.c  measurement_rim_order_realm.c
test/command/cmd_affinity_info/: cmd_affinity_info_host.c  cmd_affinity_info_realm.c  psci_affinity_info_data.h
test/command/cmd_attestation_token_continue/: cmd_attestation_token_continue_host.c  cmd_attestation_token_continue_realm.c  rsi_attestation_token_continue_data.h
test/command/cmd_attestation_token_init/: cmd_attestation_token_init_host.c  cmd_attestation_token_init_realm.c  rsi_attestation_token_init_data.h
test/command/cmd_cpu_off/: cmd_cpu_off_host.c  cmd_cpu_off_realm.c
test/command/cmd_cpu_on/: cmd_cpu_on_host.c  cmd_cpu_on_realm.c  psci_cpu_on_data.h
test/command/cmd_cpu_suspend/: cmd_cpu_suspend_host.c  cmd_cpu_suspend_realm.c
test/command/cmd_data_create/: cmd_data_create_host.c  cmd_data_create_realm.c  rmi_data_create_data.h
test/command/cmd_data_create_unknown/: cmd_data_create_unknown_host.c  rmi_data_create_unknown_data.h
test/command/cmd_data_destroy/: cmd_data_destroy_host.c  rmi_data_destroy_data.h
test/command/cmd_granule_delegate/: cmd_granule_delegate_host.c  rmi_granule_delegate_data.h
test/command/cmd_granule_undelegate/: cmd_granule_undelegate_host.c  rmi_granule_undelegate_data.h
test/command/cmd_host_call/: cmd_host_call_host.c  cmd_host_call_realm.c  rsi_host_call_data.h
test/command/cmd_ipa_state_get/: cmd_ipa_state_get_host.c  cmd_ipa_state_get_realm.c  rsi_ipa_state_get_data.h
test/command/cmd_ipa_state_set/: cmd_ipa_state_set_host.c  cmd_ipa_state_set_realm.c  rsi_ipa_state_set_data.h
test/command/cmd_measurement_extend/: cmd_measurement_extend_host.c  cmd_measurement_extend_realm.c  rsi_measurement_extend_data.h
test/command/cmd_measurement_read/: cmd_measurement_read_host.c  cmd_measurement_read_realm.c  rsi_measurement_read_data.h
test/command/cmd_mec_set_private/: cmd_mec_set_private_host.c  rmi_mec_set_private_data.h
test/command/cmd_mec_set_shared/: cmd_mec_set_shared_host.c  rmi_mec_set_shared_data.h
test/command/cmd_mem_get_perm_value/: cmd_mem_get_perm_value_host.c  cmd_mem_get_perm_value_realm.c  (+1 more)
test/database/: test_database.h  test_database_host.c  test_database_realm.c  test_database_secure.c  test_host.cmake  test_list.h  test_realm.cmake  test_secure.cmake
tools/lib/xlat_tables_v2/: CMakeLists.txt
tools/lib/xlat_tables_v2/include/: arch.h  arch_features.h  arch_helpers.h  asm_macros.S  asm_macros_common.S  assert.h  assert_macros.S  cdefs.h  config.h  debug.h  def.h  smc.h  xlat_mmu_helpers.h  xlat_tables.h  xlat_tables_aarch64.h  xlat_tables_arch.h  xlat_tables_compat.h  xlat_tables_defs.h  xlat_tables_private.h  xlat_tables_v2.h  xlat_tables_v2_helpers.h
tools/lib/xlat_tables_v2/src/: cache_helpers.S  enable_mmu.S  smc.S  xlat_tables_arch.c  xlat_tables_core.c  xlat_tables_utils.c
tools/scripts/: compile_check.py  run.sh
val/host/: val_host.cmake
val/realm/: val_realm.cmake
val/secure/: val_secure.cmake
(+560 files in other folders)
